<resources>
    <string name="app_name">FirstApplication</string>
    <string name="btn_save">Save</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_share">Share</string>
    <string name="title">Name</string>
</resources>
